--- a/test/dummy/app/views/users/new.html.erb
+++ b/test/dummy/app/views/users/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<% cache("foo.bar") do %>
+  <%= link_to 'Back', users_path %>
+<% end %>
