--- a/test/dummy/app/views/layouts/users.html.erb
+++ b/test/dummy/app/views/layouts/users.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Users: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+  <!-- Avoid ETag to match <%= rand %> -->
 </head>
 <body>
 
