Updated dummy rails application.

--- a/app/views/layouts/metrics.html.erb
+++ b/app/views/layouts/metrics.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Metrics: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'metrics' %>
 </head>
 <body>
 
