More layout stuff.

--- a/test/dummy/app/views/layouts/users.html.erb
+++ b/test/dummy/app/views/layouts/users.html.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Users: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
-  <!-- Avoid ETag to match <%= rand %> -->
+  <%= stylesheet_link_tag 'rails_metrics' %>
 </head>
 <body>
 
