--- a/app/views/rails_metrics/index.html.erb
+++ b/app/views/rails_metrics/index.html.erb
@@ -1,16 +1,16 @@
 <table id="rails_metrics_table">
   <tr>
-    <th>Instrumenter</th>
-    <th>Name</th>
+    <th>Instrumenter<%= link_to_clear_scope(:instrumenter_id) %></th>
+    <th>Name<%= link_to_clear_scope(:name) %></th>
     <th>Duration</th>
     <th>Payload</th>
-    <th></th>
+    <th>When</th>
     <th></th>
     <th></th>
   </tr>
 
 <% @metrics.each do |metric| %>
-  <% content_tag_for :tr, metric do %>
+  <% content_tag_for :tr, metric, :class => cycle("odd", "even") do %>
     <td class="instrumenter_id">
       <%= link_to_scoped_rails_metrics :instrumenter_id, metric.instrumenter_id[0..6], metric.instrumenter_id %>
     </td>
@@ -24,15 +24,15 @@
     </td>
 
     <td class="payload">
-      <%= metric.payload.inspect %>
+      <%= payload_inspect(metric.payload) %>
     </td>
 
     <td class="duration">
-      <%= time_ago_in_words(metric.started_at) %>
+      <%= time_ago_in_words(metric.started_at) %> ago
     </td>
 
     <td class="show">
-      <% link_to rails_metric_path(metric) do %>
+      <% link_to rails_metric_path(metric), :title => "Show" do %>
         <%= image_tag("rails_metrics/page_white_go.png", :title => "Show", :alt => "Show") %>
       <% end %>
     </td>
