More layout goodness.

--- a/app/views/layouts/rails_metrics.html.erb
+++ b/app/views/layouts/rails_metrics.html.erb
@@ -5,8 +5,11 @@
   <%= stylesheet_link_tag 'rails_metrics' %>
 </head>
 <body>
-  <h1>RailsMetrics</h1>
-  <% if notice.present? %><p class="notice"><%= notice %></p><% end %>
+  <div id="rails_metrics_header">
+    <h1>RailsMetrics</h1>
+    <div><%= yield :rails_metrics_header %></div>
+  </div>
+  <%= content_tag(:div, notice, :class => :notice) if notice.present? %>
   <%= yield %>
 </body>
 </html>
