--- a/app/views/rails_metrics/index.html.erb
+++ b/app/views/rails_metrics/index.html.erb
@@ -1,47 +1,25 @@
-<table id="rails_metrics_table">
-  <tr>
-    <th>Instrumenter<%= link_to_clear_scope(:instrumenter_id) %></th>
-    <th>Name<%= link_to_clear_scope(:name) %></th>
-    <th>Duration</th>
-    <th>Payload</th>
-    <th>When</th>
-    <th></th>
-    <th></th>
-  </tr>
+<% if @metrics.empty? %>
+  <h2>No metrics so far, navigate on your app and come back.</h2>
+<% else %>
+  <% content_for(:rails_metrics_header) do %>
+    <%= paginated_index_header %>
 
-<% @metrics.each do |metric| %>
-  <% content_tag_for :tr, metric, :class => cycle("odd", "even") do %>
-    <td class="instrumenter_id">
-      <%= link_to_scoped_rails_metrics :instrumenter_id, metric.instrumenter_id[0..6], metric.instrumenter_id %>
-    </td>
-
-    <td class="name">
-      <%= link_to_scoped_rails_metrics :name, metric.name %>
-    </td>
-
-    <td class="duration">
-      <%= metric.duration %> ms
-    </td>
-
-    <td class="payload">
-      <%= payload_inspect(metric.payload) %>
-    </td>
-
-    <td class="duration">
-      <%= time_ago_in_words(metric.started_at) %> ago
-    </td>
-
-    <td class="show">
-      <% link_to rails_metric_path(metric), :title => "Show" do %>
-        <%= image_tag("rails_metrics/page_white_go.png", :title => "Show", :alt => "Show") %>
-      <% end %>
-    </td>
-
-    <td class="destroy">
-      <% form_tag rails_metric_path(metric), :method => :delete do %>
-        <%= image_submit_tag "rails_metrics/page_white_delete.png", :onclick => "return confirm('Are you sure?')", :alt => "Destroy", :title => "Destroy" %>
-      <% end %>
-    </td>
+    <% form_tag url_for(params.merge(:action => "destroy_all")), :method => :delete do %>
+      <%= submit_tag "Delete all", :onclick => "return confirm('Are you sure you want to delete those #{@metrics_count} metrics?')" %>
+    <% end %>
   <% end %>
+
+  <table id="rails_metrics_table" class="index">
+    <tr>
+      <th>Instrumenter<%= link_to_clear_scope(:instrumenter_id) %></th>
+      <th>Name<%= link_to_clear_scope(:name) %></th>
+      <th>Duration</th>
+      <th>Payload</th>
+      <th>When</th>
+      <th></th>
+      <th></th>
+    </tr>
+
+    <%= render :partial => "table_row", :collection => @metrics, :as => :metric %>
+  </table>
 <% end %>
-</table>
