--- a/test/dummy/public/stylesheets/rails_metrics.css
+++ b/test/dummy/public/stylesheets/rails_metrics.css
@@ -11,84 +11,86 @@ a:visited { color: #666; }
 a:hover { color: #fff; background-color: #000; }
 
 div.notice {
-	border: 1px solid #393;
-	background: #ADA url(../images/rails_metrics/accept.png) no-repeat 2px 5px;
+  border: 1px solid #393;
+  background: #ADA url(../images/rails_metrics/accept.png) no-repeat 2px 5px;
   color: #000;
-	padding: 5px 21px;
+  padding: 5px 21px;
 }
 
 #rails_metrics_header {
-	background-color: #933;
-	display: block;
-	color: #fff;
-	margin: 0;
-	padding: 5px 3px;
+  background-color: #933;
+  display: block;
+  color: #fff;
+  margin: 0;
+  padding: 5px 3px;
 }
 
 #rails_metrics_header form {
-	display: inline;
+  display: inline;
 }
 
 h1 {
-	margin:0;
-	padding: 20px 0 5px;
+  margin:0;
+  padding: 20px 0 5px;
+}
+
+h1 a, h1 a:visited, h1 a:hover {
+  background-color: transparent;
+  color: #fff;
+  text-decoration: none;
 }
 
 h3 {
-	background-color: #c33;
-	display:block;
-	color: #fff;
-	margin: 0;
-	padding: 5px 0 3px 2px;
+  background-color: #c33;
+  display:block;
+  color: #fff;
+  margin: 0;
+  padding: 5px 0 3px 2px;
 }
 
 #rails_metrics_table {
- 	border-collapse: collapse;
+  border-bottom: 1px solid #f0f0f0;
+  border-collapse: collapse;
   text-align: center;
-	width: 100%;
+  width: 100%;
 }
 
 #rails_metrics_table.show {
-	margin-bottom: 20px;
-	text-align: left;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 #rails_metrics_table.show td{
-	padding:5px 0;
-	vertical-align: top;
+  padding:5px 0;
+  vertical-align: top;
 }
 
 #rails_metrics_table.show td:first-child{
-	font-weight: bold;
-	padding-left: 3px;
-	width: 150px;
+  font-weight: bold;
+  padding-left: 3px;
+  width: 150px;
 }
 
 #rails_metrics_table th {
-	color: #fff;
-	padding: 5px 5px 3px;
-	background-color: #c33;
+  color: #fff;
+  padding: 5px 5px 3px;
+  background-color: #c33;
 }
 
 #rails_metrics_table th a {
-	display:block;
+  display:block;
 }
 
 #rails_metrics_table th a:hover {
-	background-color: transparent;
-}
-
-#rails_metrics_table th a {
-	color: #fff;
-	text-decoration: none;
-}
-
-#rails_metrics_table td {
-	padding: 0 3px;
+  background-color: transparent;
 }
 
 #rails_metrics_table tr.odd {
-	background-color: #f0f0f0;
+  background-color: #f0f0f0;
+}
+
+#rails_metrics_table td {
+  padding: 0 3px;
 }
 
 #rails_metrics_table td.name {
@@ -97,14 +99,19 @@ h3 {
 
 #rails_metrics_table td.payload {
   text-align: left;
-	min-width: 50%;
+  min-width: 50%;
 }
 
 #rails_metrics_table td.payload p {
-	margin: 5px 0;
-	padding: 0;
+  margin: 5px 0;
+  padding: 0;
 }
 
 #rails_metrics_table td.show a:hover{
-	background-color: transparent;
+  background-color: transparent;
+}
+
+#rails_metrics_footlinks {
+  margin: 30px 0;
+  text-align: center;
 }
