--- a/app/views/rails_metrics/_table_row.html.erb
+++ b/app/views/rails_metrics/_table_row.html.erb
@@ -1,10 +1,10 @@
 <% content_tag_for :tr, metric, :class => cycle("odd", "even") do %>
   <td class="instrumenter_id">
-    <%= link_to_scoped_rails_metrics :instrumenter_id, metric.instrumenter_id[0..6], metric.instrumenter_id %>
+    <%= link_to_set_by_scope :instrumenter_id, metric.instrumenter_id[0..6], metric.instrumenter_id %>
   </td>
 
   <td class="name">
-    <%= link_to_scoped_rails_metrics :name, metric.name %>
+    <%= link_to_set_by_scope :name, metric.name %>
   </td>
 
   <td class="duration">
