--- a/app/views/rails_metrics/_table_row.html.erb
+++ b/app/views/rails_metrics/_table_row.html.erb
@@ -1,6 +1,6 @@
 <% content_tag_for :tr, metric, :class => cycle("odd", "even") do %>
   <td class="instrumenter_id">
-    <%= link_to_set_by_scope metric, :instrumenter_id, metric.instrumenter_id[0..6] %>
+    <%= link_to_set_by_scope metric, :instrumenter_id %>
   </td>
 
   <td class="name">
