--- a/app/views/rails_metrics/index.html.erb
+++ b/app/views/rails_metrics/index.html.erb
@@ -11,7 +11,7 @@
 
   <table id="rails_metrics_table" class="index">
     <tr>
-      <th>Instrumenter<br /><%= link_to_clear_by_scope(:instrumenter_id) %></th>
+      <th>Request<br /><%= link_to_clear_by_scope(:request_id) %></th>
       <th>Name<br /><%= link_to_clear_by_scope(:name) %></th>
       <th>Duration<br /><%= link_to_order_by_scopes(:slowest, :fastest) %></th>
       <th>Payload</th>
