--- a/app/views/rails_metrics/show.html.erb
+++ b/app/views/rails_metrics/show.html.erb
@@ -2,8 +2,8 @@
 
 <table id="rails_metrics_table" class="show">
   <tr class="odd">
-    <td>Instrumenter</td>
-    <td><%= link_to_set_by_scope @metric, :instrumenter_id %></td>
+    <td>Request</td>
+    <td><%= link_to_set_by_scope @metric, :request_id %></td>
   </tr>
 
   <tr class="even">
