--- a/test/dummy/public/stylesheets/rails_metrics.css
+++ b/test/dummy/public/stylesheets/rails_metrics.css
@@ -1,4 +1,8 @@
-body { background-color: #fff; color: #333; }
+body {
+  background-color: #fff;
+  color: #333; 
+  text-align:center;
+}
 
 body, p, ol, ul, td {
   font-family: helvetica, arial, sans-serif;
@@ -11,18 +15,27 @@ a:visited { color: #666; }
 a:hover { color: #fff; background-color: #000; }
 
 div.notice {
+  margin: 3px auto 5px;
+}
+
+div.notice p {
   border: 1px solid #CCA;
-  background: #FFD url(../images/rails_metrics/tick.png) no-repeat 2px 5px;
+  background: #FFD url(../images/rails_metrics/tick.png) no-repeat 5px 4px;
   color: #363;
-  padding: 5px 21px;
+  display: inline;
+  padding: 5px 7px 5px 25px;
+}
+
+div.actions, .actions form {
+  display: inline;
+}
+
+.actions a:hover{
+  background-color: transparent;
 }
 
 #rails_metrics_header {
-  background-color: #933;
-  display: block;
-  color: #fff;
-  margin: 0;
-  padding: 5px 3px;
+  padding: 5px 3px 5px;
 }
 
 #rails_metrics_header form {
@@ -30,38 +43,73 @@ div.notice {
 }
 
 h1 {
-  margin:0;
-  padding: 20px 0 5px;
+  font-size: 24px;
+  margin: 0;
+  padding: 5px 0;
 }
 
 h1 a, h1 a:visited, h1 a:hover {
   background-color: transparent;
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
-h3 {
-  background-color: #c33;
-  display:block;
-  color: #fff;
-  margin: 0;
-  padding: 5px 0 3px 2px;
+h4 {
+  font-size: 16px;
+  font-weight: 0;
 }
 
 #rails_metrics_table {
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-topleft: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 5px;
+
+  background-color: #c33;
   border-bottom: 1px solid #f0f0f0;
   border-collapse: collapse;
+  margin: 5px auto 20px;
   text-align: center;
-  width: 100%;
+}
+
+#rails_metrics_table tr.odd {
+  background-color: #f0f0f0;
+}
+
+#rails_metrics_table tr.even {
+  background-color: #fafafa;
+}
+
+#rails_metrics_table th {
+  color: #fff;
+  padding: 5px 5px 3px;
+}
+
+#rails_metrics_table th a:hover {
+  background-color: transparent;
+}
+
+#rails_metrics_table td {
+  padding: 0 10px;
+}
+
+#rails_metrics_table td.name,
+#rails_metrics_table td.payload,
+#rails_metrics_table td.path {
+  text-align: left;
+}
+
+#rails_metrics_table td.payload p {
+  margin: 5px 0;
+  padding: 0;
 }
 
 #rails_metrics_table.show {
-  margin-bottom: 20px;
   text-align: left;
 }
 
 #rails_metrics_table.show td{
-  padding:5px 0;
+  padding: 5px;
   vertical-align: top;
 }
 
@@ -71,43 +119,14 @@ h3 {
   width: 150px;
 }
 
-#rails_metrics_table th {
-  color: #fff;
-  padding: 5px 5px 3px;
-  background-color: #c33;
+#rails_metrics_table.requests td {
+  padding: 5px 10px;
 }
 
-#rails_metrics_table th a {
-  display:inline;
-}
-
-#rails_metrics_table th a:hover {
-  background-color: transparent;
-}
-
-#rails_metrics_table tr.odd {
-  background-color: #f0f0f0;
-}
-
-#rails_metrics_table td {
-  padding: 0 3px;
-}
-
-#rails_metrics_table td.name {
-  text-align: left;
-}
-
-#rails_metrics_table td.payload {
-  text-align: left;
-}
-
-#rails_metrics_table td.payload p {
-  margin: 5px 0;
-  padding: 0;
-}
-
-#rails_metrics_table td.show a:hover{
-  background-color: transparent;
+#chart_container {
+  margin: 0 auto;
+  width: 800px;
+  height: 300px;
 }
 
 #rails_metrics_footlinks {
