--- a/app/views/rails_metrics/chart.html.erb
+++ b/app/views/rails_metrics/chart.html.erb
@@ -39,7 +39,7 @@
 <table id="rails_metrics_table" class="chart">
   <tr>
     <th>Name</th>
-    <th>Duration</th>
+    <th>Duration (exclusive)</th>
     <th>Payload</th>
     <th></th>
   </tr>
