--- a/app/views/rails_metrics/_request.html.erb
+++ b/app/views/rails_metrics/_request.html.erb
@@ -1,4 +1,4 @@
-<% rails_metrics_table_row_for metric do %>
+<%= rails_metrics_table_row_for metric do %>
   <td class="when">
     <%= metric.started_at.strftime("%d %b %H:%M:%S") %>
   </td>
